--- a/src/components/AuthNavBar/auth-nav-bar.css
+++ b/src/components/AuthNavBar/auth-nav-bar.css
@@ -1,6 +1,9 @@
 header img {
-  height: 40px;
+  height: 50px;
   margin-left: 40px;
+  margin-right: 40px;
+  margin-top: 10px;
+  cursor: pointer;
 }
 
 header {
@@ -10,7 +13,6 @@ header {
   left: 0;
   right: 0;
   height: 80px;
-  display: flex;
   align-items: center;
   box-shadow: 0 0 5px 0 black;
 }
@@ -24,6 +26,7 @@ header * {
   margin: 20px;
   color: black;
   text-decoration: none;
+  float: right;
 }
 
 .selected-link {
