--- a/src/containers/ShowRoute/show-route.css
+++ b/src/containers/ShowRoute/show-route.css
@@ -32,7 +32,7 @@
     grid-row-end: 3;
 }
 
-.carousel {
+.image-slide {
     grid-column-start: 1;
     grid-column-end: 2;
     grid-row-start: 3;
