--- a/src/containers/ShowRoute/show-route.css
+++ b/src/containers/ShowRoute/show-route.css
@@ -8,7 +8,7 @@
 }
 
 .grid-container > div {
-    box-shadow: 0 0 5px 0 black;
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
 }
 
 .leaflet-container {
@@ -18,11 +18,12 @@
     grid-row-end: 2;
 }
 
-.itinerary {
+.grid-container > div.itinerary {
     grid-column-start: 3;
     grid-column-end: 4;
     grid-row-start: 1;
     grid-row-end: 4;
+    box-shadow: none;
 }
 
 .route-uploader {
