Itinerary aspect hotfix and Friends
Also some Codacy fixes

--- a/src/containers/ShowRoute/show-route.css
+++ b/src/containers/ShowRoute/show-route.css
@@ -35,7 +35,7 @@
 
 .image-slide {
     grid-column-start: 1;
-    grid-column-end: 2;
+    grid-column-end: 3;
     grid-row-start: 3;
     grid-row-end: 4;
 }
@@ -50,17 +50,15 @@
     background: rgba(0,0,0,.2);
 }
 
-.video-lister {
-    grid-column-start: 2;
-    grid-column-end: 3;
-    grid-row-start: 3;
-    grid-row-end: 4;
-}
-
 .grid-container > div.spacer {
     grid-column-start: 1;
     grid-column-end: 4;
     grid-row-start: 4;
     grid-row-end: 5;
     box-shadow: none;
+}
+
+p.coordinate {
+    margin: 10px;
+    font-size: 1rem;
 }
