--- a/src/components/Card/cards.css
+++ b/src/components/Card/cards.css
@@ -1,3 +1,7 @@
+.row {
+    margin: 0;
+}
+
 .route-card {
     width: 100%;
     height: 150px;
@@ -59,7 +63,6 @@
 
 .route-card-p {
     font-size: 1rem;
-    margin-left: 5px;
 }
 
 .route-card-link {
