--- a/src/App.css
+++ b/src/App.css
@@ -81,8 +81,14 @@ nav img {
     background: rgba(124, 77, 255, 0.9);
   }
 
+.row {
+  margin: 0 !important;
+}
 
-  .viade-toaster {
+
+
+
+.viade-toaster {
   border-radius: 4px;
   min-width: 410px;
   color: #fff;
