--- a/src/components/Card/cards.css
+++ b/src/components/Card/cards.css
@@ -1,7 +1,3 @@
-.row {
-    margin: 0;
-}
-
 .route-card {
     width: 100%;
     height: 150px;
@@ -15,6 +11,7 @@
 
 .route-card h4 {
     margin-top: 5px;
+    font-weight: bold;
 }
 
 .route-card .route-card-left {
@@ -93,4 +90,8 @@ a.route-card-a {
     z-index: 1;
     box-sizing: border-box;
     padding: 0 1rem 1rem;
+}
+
+.already-accepted {
+    background: #bcdad3;
 }
