--- a/src/containers/ShowRoute/show-route.css
+++ b/src/containers/ShowRoute/show-route.css
@@ -1,64 +1,13 @@
-.grid-container {
-    display: grid;
-    grid-template-columns: auto auto auto;
-    grid-gap: 1em;
-    padding-left: 5em;
-    padding-right: 5em;
-    padding-top: 2em;
-}
-
-.grid-container > div {
-    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
+.route-container {
+    background: #f2f2f2;
+    box-shadow: 0 8px 12px -8px rgba(0,0,0,0.4);
+    border-radius: 6px;
+    overflow: hidden;
+    position: relative;
+    margin: 1rem 0.5rem;
 }
 
 .leaflet-container {
-    grid-column-start: 1;
-    grid-column-end: 3;
-    grid-row-start: 1;
-    grid-row-end: 2;
-}
-
-.grid-container > div.itinerary {
-    grid-column-start: 3;
-    grid-column-end: 4;
-    grid-row-start: 1;
-    grid-row-end: 4;
-    box-shadow: none;
-}
-
-.route-uploader {
-    grid-column-start: 1;
-    grid-column-end: 3;
-    grid-row-start: 2;
-    grid-row-end: 3;
-}
-
-.image-slide {
-    grid-column-start: 1;
-    grid-column-end: 3;
-    grid-row-start: 3;
-    grid-row-end: 4;
-}
-
-.carousel-caption {
-    background: rgba(0,0,0,.5);
-}
-.carousel-control-prev {
-    background: rgba(0,0,0,.2);
-}
-.carousel-control-next {
-    background: rgba(0,0,0,.2);
-}
-
-.grid-container > div.spacer {
-    grid-column-start: 1;
-    grid-column-end: 4;
-    grid-row-start: 4;
-    grid-row-end: 5;
-    box-shadow: none;
-}
-
-p.coordinate {
-    margin: 10px;
-    font-size: 1rem;
+    margin-bottom: 0.5rem;
+    border: 1px solid #bcdad3;
 }
