Creation and full implementation of CustomButton
Close #158
Follows #142

--- a/src/components/Card/cards.css
+++ b/src/components/Card/cards.css
@@ -63,6 +63,12 @@
     font-size: 1rem;
 }
 
+.route-card-button {
+    position: absolute;
+    bottom: 1rem;
+    right: 1rem;
+}
+
 .route-card-link {
     position: absolute;
     bottom: 1rem;
