--- a/src/components/Cards/cards.css
+++ b/src/components/Cards/cards.css
@@ -24,6 +24,10 @@
     z-index: 2;
 }
 
+.route-card .profile-card-left {
+    background: #34d1ab;
+}
+
 .route-card:hover .route-card-left {
     width: 100%;
     border-radius: 0 5px 5px 0;
@@ -59,6 +63,16 @@
     margin-top: 5px;
 }
 
+.route-card h1 {
+    margin-top: 5px;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+.route-card .route-card-left h1 {
+    color: #f2f2f2;
+}
+
 .route-card-p {
     font-size: 1rem;
 }
@@ -81,6 +95,48 @@
     padding: 0.125rem 0.75rem;
     border-radius: 100px;
     white-space: nowrap;
+}
+
+.profile-card-webid {
+    position: absolute;
+    font-size: 1.25em;
+    font-weight: bold;
+    background: rgba(0,0,0,0.15);
+    padding: 0.125rem 0.75rem;
+    border-radius: 100px;
+    white-space: nowrap;
+}
+
+.route-card .route-card-left .stats {
+    font-size: 2rem;
+    display: flex;
+    position: absolute;
+    bottom: 1rem;
+    left: 1rem;
+    right: 1rem;
+    top: auto;
+    color: #f2f2f2;
+}
+
+.route-card .route-card-left .stats > div {
+    flex: 1;
+    text-align: center;
+}
+
+.route-card .route-card-left .stats i {
+    display: block;
+}
+
+.route-card .route-card-left .stats div.title {
+    font-size: 0.75rem;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+.route-card .route-card-left .stats div.value {
+    font-size: 1.5rem;
+    font-weight: bold;
+    line-height: 1.5rem;
 }
 
 a.route-card-a {
