--- a/src/components/Cards/cards.css
+++ b/src/components/Cards/cards.css
@@ -13,6 +13,16 @@
     height: 50px;
 }
 
+.route-card h1 {
+    margin-top: 5px;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+.route-card h3 {
+    margin-top: 10px;
+}
+
 .route-card h4 {
     margin-top: 5px;
     font-weight: bold;
@@ -22,18 +32,19 @@
     position: absolute;
     width: 150px;
     height: 100%;
-    background: #bcdad3;
+    background: #34d1ab;
     transition: width 0.4s;
     overflow: hidden;
     z-index: 2;
+    color: #f2f2f2;
 }
 
 .route-card .friend-card-left {
     width: 15px;
 }
 
-.route-card .profile-card-left {
-    background: #34d1ab;
+.route-card .route-card-left h1 {
+    color: #f2f2f2;
 }
 
 .route-card:hover .route-card-left {
@@ -69,24 +80,6 @@
 
 .route-card .route-card-left .friend-card-extra {
     left: 15px;
-}
-
-.route-card .route-card-left .route-card-extra h4 {
-    margin-top: 5px;
-}
-
-.route-card h3 {
-    margin-top: 10px;
-}
-
-.route-card h1 {
-    margin-top: 5px;
-    font-weight: bold;
-    text-transform: uppercase;
-}
-
-.route-card .route-card-left h1 {
-    color: #f2f2f2;
 }
 
 .route-card-p {
@@ -155,16 +148,16 @@
     line-height: 1.5rem;
 }
 
-a.route-card-a,
-.friend-card a {
+a.card-a,
+a.card-a:hover {
     color: black;
 }
 
-.profile-card-left a {
+.route-card .route-card-left a {
     color: #f2f2f2;
 }
 
-.profile-card-left a:hover {
+.route-card-left a:hover {
     color: #f2f2f2;
     text-decoration: none;
 }
@@ -185,7 +178,8 @@ a.route-card-a,
 }
 
 .already-accepted {
-    background: #bcdad3;
+    background: #34d1ab;
+    color: #f2f2f2;
 }
 
 .fa-external-link-alt {
