The share component now takes the route URL and share it with the friend you select from the list
Needs fixes with some profiles.
Needs some retroalimentation when the share is completed.

--- a/src/App.css
+++ b/src/App.css
@@ -94,7 +94,12 @@ nav img {
     background: rgba(124, 77, 255, 0.9);
   }
 
-
+.list-holder > ul {
+  list-style: none;
+  margin-left: 0;
+  padding-left: 1em;
+  text-indent: -1em;
+}
 
 
 .viade-toaster {
