Route name and description edit feature, still lacks pod saving
First part of #233

--- a/src/components/RoutesMap/RoutesTitle/routes-title.css
+++ b/src/components/RoutesMap/RoutesTitle/routes-title.css
@@ -5,3 +5,17 @@
 .share-img {
     height: 50px;
 }
+
+.edit {
+    background: transparent;
+    border: none;
+    border-bottom: 1px dashed #89d9c6;
+    width: 100%;
+    outline: none;
+    padding: 0 0 0 0;
+    font-style: italic;
+}
+
+.edit-title {
+    font-size: 2rem;
+}
