--- a/src/components/RoutesMap/RoutesTitle/routes-title.css
+++ b/src/components/RoutesMap/RoutesTitle/routes-title.css
@@ -9,7 +9,7 @@
 .edit {
     background: transparent;
     border: none;
-    border-bottom: 1px dashed #89d9c6;
+    border-bottom: 1px dotted #89d9c6;
     width: 100%;
     outline: none;
     padding: 0 0 0 0;
