--- a/src/components/RoutesMap/RoutesCarousel/routes-carousel.component.css
+++ b/src/components/RoutesMap/RoutesCarousel/routes-carousel.component.css
@@ -1,7 +1,11 @@
 .route-img {
-    width: 500px;
     height: 500px;
     margin: 0 auto;
+}
+
+.no-media {
+    text-align:center;
+    height:500px;
 }
 
 .carousel-caption {
