Fixed style and added error message when the user doesn't exists
#238

--- a/src/containers/Profile/profile.container.css
+++ b/src/containers/Profile/profile.container.css
@@ -16,3 +16,9 @@
 .card-text {
     margin-top: 25px;
 }
+
+.input-group > .input-group-append > .btn {
+    background: #34d1ab;
+    border-color: #34d1ab;
+    color: #f2f2f2;
+}
