--- a/src/components/RoutesMap/RoutesMediaUpload/routes-media-upload.css
+++ b/src/components/RoutesMap/RoutesMediaUpload/routes-media-upload.css
@@ -2,7 +2,7 @@
     background: #bcdad3;
     font-size: 1.25rem;
     padding: 10px 20px;
-    box-shadow: 0 8px 12px -8px rgba(0,0,0,0.4);
+    box-shadow: 0 8px 12px -8px rgba(0, 0, 0, 0.4);
     border-radius: 6px;
     cursor: pointer;
 }
